# splitter

./: CMakeLists.txt  bs.sh  clayman.cpp  clayman.hpp
include/: clay.h  clayman.cpp  clayman.hpp
include/sdl2/: clay_renderer_SDL2.c  clay_renderer_SLD2.h
src/: clay-video-demo.cpp  clay-video-demo.hpp  splitter.cpp  splitter.hpp
src/assets/: asset_loader.cpp  asset_loader.hpp
src/elements/: elements.hpp  goBackButton.cpp
src/pages/: homePage.cpp  pages.hpp  pdfSplitterPage.cpp
src/styles/: styles.hpp  variables.cpp
